--- a/code/employee_mgmt_app/requirements.txt
+++ b/code/employee_mgmt_app/requirements.txt
@@ -1,6 +1,7 @@
 click==8.1.0
 colorama==0.4.4
 Flask==2.1.0
+Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
