--- a/code/employee_mgmt_app/env/pyvenv.cfg
+++ b/code/employee_mgmt_app/env/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\Python\Python3.9
+home = C:\Users\23-04\AppData\Local\Programs\Python\Python39
 include-system-site-packages = false
-version = 3.9.11
+version = 3.9.10
